--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,27 +4,27 @@
 // Configuration and Variables
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
-// @import 'abstracts/functions';
+@import 'abstracts/functions';
 
 // Base styles and resets
 @import 'base/reset';
 @import 'base/typography';
-// @import 'base/animations';
+@import 'base/animations';
 
 // Component styles
-// @import 'components/header';
-// @import 'components/weather-card';
-// @import 'components/location-selector';
-// @import 'components/time-selector';
-// @import 'components/week-comparison';
-// @import 'components/loading';
+@import 'components/header';
+@import 'components/weather-card';
+@import 'components/location-selector';
+@import 'components/time-selector';
+@import 'components/week-comparison';
+@import 'components/loading';
 
 // Layout styles
 @import 'layout/grid';
-// @import 'layout/container';
+@import 'layout/container';
 
 // Theme variations
-// @import 'themes/weather-conditions';
+@import 'themes/weather-conditions';
 
 // Utility classes
-// @import 'utilities/helpers';
+@import 'utilities/helpers';
