--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,6 +14,7 @@
 // Component styles
 @import 'components/header';
 @import 'components/weather-card';
+@import 'components/weather-chart';
 @import 'components/location-selector';
 @import 'components/time-selector';
 @import 'components/week-comparison';
