--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,6 +19,7 @@
 @import 'components/time-selector';
 @import 'components/week-comparison';
 @import 'components/loading';
+@import 'components/simplified-weather-cards';
 
 // Layout styles
 @import 'layout/grid';
